--- a/Projeto-health-care/style.css
+++ b/Projeto-health-care/style.css
@@ -60,19 +60,55 @@ body{
 }
 
 .home__form{
-    width: 500px;
-    background-color: #fff;
+    width: 420px;
+    background-color: rgba(255,255,255,.8);
     margin: 0 auto;
     box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 10px;
     top: 100px;
-    padding: 30px;
+    padding: 60px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
+.home__logo{
+    width: auto;
+    height: 134px;
+    margin-bottom: 30px;
+}
+
 .home__input{
-    
+    border-top: 0;
+    border-right: 0;
+    border-left: 0;
+    border-bottom: 1px solid #616161;
+    padding: 10px;
+    width: 300px;
+    background-color: transparent;
+    text-align: center;
+}
+
+.home__button{
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 14px;
+    padding: 10px 30px;
+    border-radius: 5px;
+    background-color: rgba(84, 54, 109, 0.671);
+    margin: 30px;
+    border: 0;
+    letter-spacing: 3;
+    font-weight: 300;
+}
+
+.home__button:hover{
+    background-color: #2d193d;
+    box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.2);
+    border: 0;
+}
+
+.home__text{
+    font-size: 14px;
+    color: #616161;
 }
