--- a/Projeto-health-care/pages/pagina-paciente/paciente.css
+++ b/Projeto-health-care/pages/pagina-paciente/paciente.css
@@ -102,6 +102,44 @@
     width: 100%;
 }
 
+@media (min-width: 767px) {
+    .table-responsive {
+        display: block;
+        position: relative;
+        width: 100%;
+      }
+    
+    .table-responsive thead,
+    .table-responsive th,
+    .table-responsive td,
+    .table-responsive tr {
+    display: block;
+    }
+
+    .table-responsive td,
+    .table-responsive th {
+    height: auto;
+    }
+
+    .table-responsive thead {
+        float: left;
+    }
+
+    .table-responsive tbody {
+        width: auto;
+        position: relative;
+        overflow-x: auto;
+        -webkit-overflow-scrolling: touch;
+        white-space: nowrap;
+    }
+    
+    .table-responsive tbody tr {
+        display: inline-block;
+    }
+
+}    
+
+
 .pag__pacient--table th{
     background-color: rgba(84, 54, 109, 0.671);
     padding: 10px 0;
