Criação da aplicação Bubble Sound para estudo de JS

--- a/Projeto-health-care/pages/pagina-paciente/paciente.css
+++ b/Projeto-health-care/pages/pagina-paciente/paciente.css
@@ -102,7 +102,7 @@
     width: 100%;
 }
 
-@media (min-width: 767px) {
+/* @media (max-width: 767px) {
     .table-responsive {
         display: block;
         position: relative;
@@ -137,7 +137,7 @@
         display: inline-block;
     }
 
-}    
+}     */
 
 
 .pag__pacient--table th{
